_sass/_layout.scss
/* Layout */

// Reset
body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { margin: 0; padding: 0; }

// Set Widths
.home .block, .journal .block, .post-header, .post-content, .site-footer .footer-nav, .site-footer .legal { width: 24em; margin: 0 auto; }

// Figures
.post figure { margin-bottom: 2em;
    &.full-width { position: relative; width: 100vw; left: calc(-50vw + 50%); }
    &.large-center { width: 100%; }
    &.quarter-left { position: relative; width: 40vw; max-width: 35em; left: calc(-45vw + 50%); float: left; margin-right: calc(-45vw + 55%); padding-top: 0.5em; margin-bottom: 0; }
    figcaption { font-size: $small-font-size; padding-top: 1em; }
}

// Site Header
.site-header { position: fixed; top: 0; left: 0; width: 100%; z-index: 10000; background: rgb(255,255,255); overflow: hidden; padding: 1em 0; @include transition(all, 0.3s, ease-in-out);
    .block { width: 100%; }
    .menu-icon { fill: $grey-color-light; position: absolute; top: 2em; left: 2em; width: 1.5em; @include transition(all, 0.3s, ease-in-out); }
    h1, nav { display: block; margin: 0 auto; text-align: center; }
    h1, nav a { @include transition(font-size, 0.3s, ease-in-out); }
    h1, nav a { line-height: 50px; }
    h1 { text-transform: uppercase; font-size: 2em; margin: 0; 
        a { color: $grey-color;
            &:hover { color: $grey-color-light; }
        }
    }
    nav { display: none;
        li { list-style: none; }
        a { font-family: $header-font-family; text-transform: uppercase; color: $grey-color-light; margin: 0 0 0 0; font-size: 1.2em;
            &:hover { color: $grey-color-light; }
        }
    }
    // Reduced Size Header
    &.site-header-shrink { padding: 0; @include opacity(0.97); background: $grey-color;
        .menu-icon { fill: #fff; width: 1em; top: 1em; }
        h1, nav a { line-height: 50px; }
        h1 { font-size: 0.85em; 
            a { color: $grey-color-light; }
        }
        nav a { font-size: 0.85em; }
    }
}

// Banner
.banner { width: 100%; height: 30em; overflow: hidden; background: url('/images/banner.jpg'); background-size: cover !important; background-position: center top !important;
    &:before { content: " "; background: rgba(0,0,0,0.5); display: block; width: 100%; height: 100%; }
}

// Home
.intro { padding-top: 3em;
    p { font-size: 1.75em; text-align: center; }
}

// Buttons
.btn {
    border-radius: .3em;
    border-style: solid;
    border-width: 1px;
    display: inline-block;
    margin-top: 2em;
    padding: .5em 3em;
    text-align: center;
    text-transform: uppercase;
    transition: color .4s, background-color .4s, border .4s;
    &:hover, &:focus { 
        background-color: $brand-color;
        color: white !important;
        border-color: $brand-color;
        transition: background-color .3s, color .3s, border .3s;
    }
    &.wide { width: calc(100% - 6em); }
}

// Post
.post { padding-bottom: 5em; }
.video-container {position: relative; margin-bottom: 2em; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
.video-container iframe, .video-container object, .video-container embed {position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }

// Journal
.journal {
    .post { padding-bottom: 3em; border-top: 1px solid $grey-color-light;
        &:first-child { border-bottom: none; }
        header { text-align: center; 
            .post-date { font-style: italic; }
        }
    }
}

// Site Footer
.site-footer { padding-bottom: 2em; background: $grey-color; color: $grey-color-light;
    a { color: $grey-color-light; text-transform: uppercase;
        &:hover { color: rgb(255,255,255); }
    }
    .footer-nav { padding: 2em 0; border-bottom: 1px solid $grey-color-light; text-align: center;
        li { list-style: none; display: inline-block; padding-right: 2em; 
            &:last-child { padding-right: 0; }
        }
    }
    .legal { padding-top: 2em; font-size: $small-font-size; text-align: center; }
}

@media screen and (min-width: $is-medium) {
    // Set Widths
    .home .block, .journal .block, .post-header, .site-footer .footer-nav, .site-footer .legal { width: 50em; margin: 0 auto; }
    .post-content { width: 43em; margin: 0 auto; }
    // Figures
        .post figure.large-center { position: relative; width: 75vw; left: calc(-35vw + 50%); }
    
    // Site Header
    .site-header { background: none; padding: 0; 
        .block { width: 90%; max-width: 69em; margin: 0 auto; padding: 0 1.875em; }
        .menu-icon { display: none; }
        h1, nav { display: inline-block; position: relative; }
        h1, nav a { line-height: 150px; }
        h1 a, nav a { color: rgba(255,255,255,0.8); }
        h1 { float: left; }
        nav { display: block; float: right; 
            li { display: inline-block; margin-right: 2em; 
                &:last-child { margin-right: 0; }
            }
        }
        // Reduced Size Header
        &.site-header-shrink {
            h1, nav a { line-height: 50px; }
        }
    }
    
    // Banner
    .banner { max-height: 50em; }
}
 

